vlib/v/checker/tests/reference_field_must_be_initialized.out
vlib/v/checker/tests/reference_field_must_be_initialized.v:8:7: error: reference field `Node.next` must be initialized
    6 |
    7 | fn main(){
    8 |     n := Node{ data: 123 }
      |          ~~~~~~~~~~~~~~~~~
    9 |     eprintln('n.data: $n.data')
   10 | }
